fix(query-results): Constrain body size to 100% and use flex layout to avoid overflows

--- a/media/css/query.css
+++ b/media/css/query.css
@@ -1,3 +1,17 @@
+/* Base page styles to prevent overflows */
+html, body {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+}
+
 /* Base button styles */
 button {
 	padding: 5px 10px;
@@ -235,8 +249,19 @@ button:disabled,
 	cursor: pointer;
 }
 
+
+#resultBlock {
+	display: flex;
+	flex-direction: column;
+
+	/* Make block fill the remaining space */
+	flex-grow: 1;
+	flex-shrink: 0;
+}
+
 #bigqueryResults {
 	margin-top: 20px;
+	flex-grow: 1;
 }
 
 #queryLimit {
@@ -1103,3 +1128,5 @@ body.vscode-dark .copy-model-button:hover {
     opacity: 1;
     transform: translateY(0);
 }
+
+
